--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
         </div>
       </div>
     </div>
+    
+    <div class="row justify-content-center mt-5">
+      <div class="col-md-8">
+        <div class="card border-secondary mb-3">
+          <div class="card-body">
+            <h5 class="card-title text-center">Privacy Information</h5>
+            <p class="card-text">Our mobile app is designed to protect your privacy. We do not collect any information about you or your device. We do not track your location, your browsing history, your contacts, or any other personal information. We do not use cookies, analytics tools, or any other technologies that can track your behavior or preferences.</p>
+            <p class="card-text">We respect your right to privacy and we will never sell, rent, or share your information with any third party. We do not display any ads or promotions in our app, and we do not use any third-party services that might collect data about you.</p>
+            <p class="card-text">If you have any questions or concerns about our privacy practices, please contact us at privacy@dontmissnextgame.com.</p>
+          </div>
+        </div>
+      </div>
+    </div>        
   </div>
 
   <!-- Bootstrap Bundle with Popper -->
