added screenshots to the page

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           <div class="card-body">
             <h5 class="card-title text-center">Never miss a game again!</h5>
             <p class="card-text">Don't Miss Next Match is a must-have mobile app for soccer fans who never want to miss a game. With a sleek and simple design, this app offers an easy way to stay on top of your favorite soccer team's schedule.</p>
-            <img src="https://via.placeholder.com/600x400" class="img-fluid my-3" alt="Next game screenshot">
+            <img src="App-Main-Screen.png" height="480" class="img-fluid my-3" alt="Next game screenshot">
             <p class="card-text">The app's home screen displays the date, time, and location of the next upcoming game for your team, ensuring that you are always ready and able to tune in.</p>
             <p class="card-text">In addition to showing the next game, Don't Miss Next Match also displays the score of the team's last game, so you can keep track of their progress throughout the season. This feature is especially useful for fans who are unable to watch every game but still want to stay informed about their team's performance.</p>
-            <img src="https://via.placeholder.com/600x400" class="img-fluid my-3" alt="Last game score screenshot">
+            <img src="App-Select-Team.png" height="480" class="img-fluid my-3" alt="Last game score screenshot">
             <p class="card-text">With its clean and user-friendly interface, Don't Miss Next Match is the perfect app for anyone who wants to stay up-to-date with their favorite soccer team's schedule and scores. Whether you're a die-hard fan or a casual spectator, this app is an essential tool for keeping track of the action on the pitch.</p>
             <p class="card-text">Plus, you can enjoy peace of mind knowing that your privacy is being respected - Don't Miss Next Match does not collect any personal information or track your activity.</p>
             <p class="text-center"><a href="#" class="btn btn-primary">Download Don't Miss Next Match</a></p>
