--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img src="App-Select-Team.png" height="480" class="img-fluid my-3" alt="Last game score screenshot">
             <p class="card-text">With its clean and user-friendly interface, Don't Miss Next Match is the perfect app for anyone who wants to stay up-to-date with their favorite soccer team's schedule and scores. Whether you're a die-hard fan or a casual spectator, this app is an essential tool for keeping track of the action on the pitch.</p>
             <p class="card-text">Plus, you can enjoy peace of mind knowing that your privacy is being respected - Don't Miss Next Match does not collect any personal information or track your activity.</p>
-            <p class="text-center"><a href="#" class="btn btn-primary">Download Don't Miss Next Match</a></p>
+            <p class="text-center"><a href="https://apps.apple.com/app/dont-miss-next-game/id1672485239" class="btn btn-primary">Download Don't Miss Next Match</a></p>
           </div>
         </div>
       </div>
@@ -41,7 +41,7 @@
             <h5 class="card-title text-center">Privacy Information</h5>
             <p class="card-text">Our mobile app is designed to protect your privacy. We do not collect any information about you or your device. We do not track your location, your browsing history, your contacts, or any other personal information. We do not use cookies, analytics tools, or any other technologies that can track your behavior or preferences.</p>
             <p class="card-text">We respect your right to privacy and we will never sell, rent, or share your information with any third party. We do not display any ads or promotions in our app, and we do not use any third-party services that might collect data about you.</p>
-            <p class="card-text">If you have any questions or concerns about our privacy practices, please contact us at privacy@dontmissnextgame.com.</p>
+            <p class="card-text">If you have any questions or concerns about our privacy practices, please contact us at <a href=mailto:privacy@dontmissnextgame.com>privacy@dontmissnextgame.com</a>.</p>
           </div>
         </div>
       </div>
