--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="row flex-lg-row align-items-center g-5 py-5">
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">Never miss a game again!</h1>
-        <p class="lead">Don't Miss Next Match is a must-have mobile app for soccer fans who never want to
+        <p class="lead">Don't Miss Next Game is a must-have mobile app for soccer fans who never want to
           miss a game. With a sleek and simple design, this app offers an easy way to stay on top of your favorite
           soccer team's schedule.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
